test/regress/coverage-report-getat-seq-oob.test
; Coverage for report.cc fn_get_at index out of bounds on sequence
; When get_at is called on a sequence with an index >= sequence size

~ Monthly
    Expenses:Food    $200.00
    Assets:Checking

2024/01/15 Grocery
    Expenses:Food    $180.00
    Assets:Checking

test budget --begin 2024/01/01 --end 2024/02/01 --format '%(get_at(amount, 5))\n' Expenses -> 1
__ERROR__
While evaluating value expression:
  get_at(amount, 5)
  ^^^^^^^^^^^^^^^^^
While calling function 'get_at (($180.00, $-200.00), 5)':
Error: Attempting to get index 5 from a sequence with 2 elements
end test
